--- a/style.css
+++ b/style.css
@@ -1,1 +1,116 @@
-*{margin:0;padding:0;box-sizing:border-box}body{height:100vh}.contenedor{height:100%;display:flex;flex-direction:column;justify-content:center;align-items:center;gap:20%;width:100%}.cards{display:flex;justify-content:center;gap:100px;width:100%;max-width:1200px}.cards .card{padding:20px;background-color:#555;border-radius:10px;display:flex;flex-direction:column;gap:20px}.cards .card h2{color:#ff4500;text-align:center}.cards .card img{border-radius:10px}.cards .card .botones{display:flex;justify-content:space-evenly}.cards .card .botones button{display:flex;justify-content:center;align-items:center;width:50px;padding:3px 20px;border:none;border-radius:10px;background-color:#ff4500;color:#fff;font-weight:bold;font-size:14px}.cards .card .botones button h2{color:#fff}.cards .card .stock{display:flex;justify-content:center}.cards .card .stock h4{color:#fff}.carrito{width:500px;display:flex;flex-direction:column;justify-content:space-evenly;background-color:#222;color:#fff;border-radius:10px;padding:10px 0 30px 10px}.carrito__row1,.carrito__row2{display:flex;padding:10px 0}.carrito__row1 h3,.carrito__row2 h3{flex-basis:50%;text-align:center}.carrito__row1{color:#ff4500}
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  min-height: 100vh;
+}
+
+.contenedor {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 50px;
+  width: 100%;
+  padding: 50px;
+}
+
+.cards {
+  display: flex;
+  justify-content: center;
+  gap: 50px;
+  width: 100%;
+  max-width: 1200px;
+}
+.cards .card {
+  padding: 20px;
+  background-color: #555;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+.cards .card h2 {
+  color: orangered;
+  text-align: center;
+}
+.cards .card__content {
+  display: flex;
+  gap: 20px;
+}
+.cards .card__content--info {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  justify-content: center;
+}
+.cards .card img {
+  border-radius: 10px;
+}
+.cards .card .botones {
+  display: flex;
+  justify-content: space-evenly;
+  gap: 20px;
+}
+.cards .card .botones button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 50px;
+  padding: 3px 20px;
+  border: none;
+  border-radius: 10px;
+  background-color: orangered;
+  color: #fff;
+  font-weight: bold;
+  font-size: 14px;
+  cursor: pointer;
+}
+.cards .card .botones button h2 {
+  color: #fff;
+}
+.cards .card .botones button#restarProd1,
+.cards .card .botones button#restarProd2,
+.cards .card .botones button#restarProd3 {
+  display: none;
+}
+.cards .card .botones button.disabled {
+  background-color: gray;
+  display: flex;
+}
+.cards .card .botones button.disabled:hover {
+  cursor: not-allowed;
+}
+.cards .card .stock {
+  display: flex;
+  justify-content: center;
+}
+.cards .card .stock h4 {
+  color: #fff;
+}
+
+.carrito {
+  width: 500px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  background-color: #222;
+  color: #fff;
+  border-radius: 10px;
+  padding: 10px 0 30px 10px;
+}
+.carrito__row1, .carrito__row2 {
+  display: flex;
+  padding: 10px 0;
+}
+.carrito__row1 h3, .carrito__row2 h3 {
+  flex-basis: 50%;
+  text-align: center;
+}
+.carrito__row1 {
+  color: orangered;
+}
