--- a/style.scss
+++ b/style.scss
@@ -5,23 +5,24 @@
 }
 
 body {
-	height: 100vh;
+	min-height: 100vh;
 }
 
 .contenedor {
-	height: 100%;
+	min-height: 100vh;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	gap: 20%;
+	gap: 50px;
 	width: 100%;
+	padding: 50px;
 }
 
 .cards {
 	display: flex;
 	justify-content: center;
-	gap: 100px;
+	gap: 50px;
 	width: 100%;
 	max-width: 1200px;
 
@@ -29,6 +30,18 @@ body {
 		h2 {
 			color: orangered;
 			text-align: center;
+		}
+
+		&__content {
+			display: flex;
+			gap: 20px;
+
+			&--info {
+				display: flex;
+				flex-direction: column;
+				gap: 20px;
+				justify-content: center;
+			}
 		}
 
 		padding: 20px;
@@ -44,6 +57,7 @@ body {
 		.botones {
 			display: flex;
 			justify-content: space-evenly;
+			gap: 20px;
 
 			button {
 				display: flex;
@@ -57,9 +71,25 @@ body {
 				color: #fff;
 				font-weight: bold;
 				font-size: 14px;
+				cursor: pointer;
 
 				h2 {
 					color: #fff;
+				}
+			}
+
+			button#restarProd1,
+			button#restarProd2,
+			button#restarProd3 {
+				display: none;
+			}
+
+			button.disabled {
+				background-color: gray;
+				display: flex;
+
+				&:hover {
+					cursor: not-allowed;
 				}
 			}
 		}
