--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
 
 body {
   min-height: 100vh;
+  background-color: #333;
 }
 
 .contenedor {
@@ -50,6 +51,10 @@ body {
 }
 .cards .card img {
   border-radius: 10px;
+  width: 200;
+  height: 200px;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 .cards .card .botones {
   display: flex;
