--- a/style.css
+++ b/style.css
@@ -84,7 +84,7 @@ body {
   display: none;
 }
 .cards .card .botones button.disabled {
-  background-color: gray;
+  background-color: #808080;
   display: flex;
 }
 .cards .card .botones button.disabled:hover {
